--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <p>Salam kenal... :)</p>
         <div class="box-contact">
           <p>Berminat bekerja dengan saya:</p>
-          <a href="#"><i class="fab fa-instagram"></i> <span>syirooj_almuniir9</span></a>
+          <a href="https://www.instagram.com/syirooj_almuniir9/?hl=id"><i class="fab fa-instagram"></i> <span>syirooj_almuniir9</span></a>
         </div>
       </div>
     </div>
@@ -95,9 +95,9 @@
         </div>
         <div class="bottom-side">
           <ul>
-            <li><a href="#">AMI Blog</a></li>
-            <li><a href="#">Nyemil Cemil</a></li>
-            <li><a href="#">PPI Yaman</a></li>
+            <li><a href="https://amiahgaff.blogspot.com/">AMI Blog</a></li>
+            <li><a href="https://nyemilcemilshop.blogspot.com/">Nyemil Cemil</a></li>
+            <li><a href="https://ppiyaman.org/">PPI Yaman</a></li>
           </ul>
         </div>
       </div>
