--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
   />
-  <title>My Portfolio Website</title>
+  <title>M. Syiroojul Munir</title>
 </head>
 <body>
   <div id="beranda" class="container first">
