--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
   <div class="container fourth">
     <footer>
-      <p>Dibuat dengan <i class="fas fa-heart"></i> oleh <span>Kang Siroj</span>, 2021</p>
+      <p>Dibuat dengan <i class="fas fa-heart" style="color: red"></i> oleh <span>Kang Siroj</span>, 2021</p>
       <p>Sumber gambar dari <a href="https://www.flaticon.com/"><img src="./images/flaticon.png" alt="Flaticon"> Flaticon</a></p>
     </footer>
   </div>
