Update html file

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
   />
-  <link rel="shortcut icon" href="images/lampukode.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="images/newlampukode3.ico" type="image/x-icon">
   <title>M. Syiroojul Munir</title>
 </head>
 <body>
